kubernetes/applications/wiki-js/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: wiki-js
  namespace: wiki-js
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: udm-pro.zimmermann.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/ingress.class: traefik
    # Homepage Service Discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Productivity"
    gethomepage.dev/name: "Wiki.js"
    gethomepage.dev/icon: "wikijs.png"
    gethomepage.dev/weight: "2"
    gethomepage.dev/href: "https://PLACEHOLDER"

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
      middlewares:
        - name: chain-standard
          namespace: ingress-controller
      services:
        - kind: Service
          name: wiki-js
          port: 80
  tls:
    secretName: wiki-js-tls-cert
